--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "figma-make-local-runner",
+  "name": "prototype-make",
   "private": true,
   "version": "0.0.0",
   "type": "module",
